build.gradle:  suppress the System::load() warning during tests